Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98764

Flickable doesn't react to mouse drag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.3
    • 6.2.1
    • Quick: Controls 2
    • None
    • WebAssembly
    • 820a6d4117fc59b960e273e5f10d65b89217ce61

    Description

      I try the Scrollbar exemple (C:\Qt\Examples\Qt-6.2.1\quick\customitems\scrollbar)

      On windows, flickable reacts to mouse drag, mouse wheel and touch gesture.

      On webassembly, it only reacts to touch gesture. mouse drag is not working and mouse wheel is sporadic.

      It might be relative to QTBUG-71949

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            remy67 remy rouvin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes