Qt For WebAssembly / Emscripten support

- add ifdefs to CMakeLists.txt to support WebAssembly builds
  which don't use DBus
- add ifdefs to main.cpp to remove usages of DBus
- load wasm.qml instead of main.qml on WebAssembly platform
- contain the main window content in a sub-item which on
  WebAssembly platform is sized according to the theme's selected
  size and clips

To build:
- install emscripten SDK as documented in Qt For WebAssembly docs
- install Qt 6.2.4 with Qt For WebAssembly support
  Note: Qt 6.2.2 suffers from QTBUG-98764 Flickable issue
- reboot machine
- run QtCreator, configure for WebAssembly target, release build

To deploy:
- place the following files in a separate directory:
  qtloader.js
  qtlogo.svg
  venus-gui-v2.cbp
  venus-gui-v2.html
  venus-gui-v2.js
  venus-gui-v2.wasm

To run:
- C:\Development\emscripten\emsdk\python\3.9.2-1_64bit\python.exe \
  C:/Development/emscripten/emsdk/upstream/emscripten/emrun.py \
    --browser chrome --port 30000 --no_emrun_detect
    --serve_after_close C:/path/to/deployment/dir/venus-gui-v2.html